--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,17 +1,23 @@
-* {
-    font-family: "Josefin Sans", sans-serif;
-    box-sizing: border-box;
+:root {
+    --styling-font-title: Tektur, Georgia, serif;
+    --styling-font-text: Raleway, Georgia, sans-serif;
+    --Accent1-Color: #fbfbc1;
+    --Accent2-color: #3e0923;
+    --Title-color: #ffff75;
+    --Text-color: #6a0c39;
+    --Hover: #830240;
+    text-decoration: none;
 }
 
 /* ----------------------------------------------------Header---------------------------------------------------- */
 
 header {
     display: grid;
-    grid-template-columns: 24px auto 44px;
+    grid-template-columns: 24px 1fr 1fr;
     padding: 5px 0 5px 10px;
     align-items: end;
     column-gap: 8px;
-    background-color: #898bf1;
+    background-color: var(--Accent2-color);
 }
 
 header img {
@@ -23,7 +29,8 @@ header img {
 
 header span {
     font-size: 1.2rem;
-    color: #000000;
+    color: var(--Title-color);
+    font-family: var(--styling-font-title);
 }
 
 /* ------------------------------------Navigation------------------------------------ */
@@ -32,7 +39,7 @@ header span {
     background: none;
     border: none;
     font-size: 2rem;
-    color: #000000;
+    color: var(--Title-color);
     cursor: pointer;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -59,17 +66,18 @@ header span {
 }
 .navigation a {
     display: block;
-    color: #000000;
-    background-color: #ba5ff798;
+    color: var(--Title-color);
+    background-color: var(--Accent2-color);
     text-decoration: none;
     border: solid 1px #000000;
     padding: .8rem 10px;
+    font-family: var(--styling-font-title);
 }
-.navigation li.current {
-    background-color: #eee;
+.navigation a.current {
+    background-color: #5f0f0f;
 }
 .navigation a:hover {
-    background-color: #e0de5f;
+    background-color: var(--Hover);
 }
 
 /* ----------------------------------------------------Body---------------------------------------------------- */
@@ -82,6 +90,7 @@ header span {
     list-style-type: none;
     gap: 15px;
     padding: 0;
+    font-family: var(--styling-font-title);
 }
 .filters li {
     display: flex;
@@ -89,23 +98,26 @@ header span {
     align-items: center;
     text-decoration: none;
     border:  #000000 solid 2px;  
-    background-color: #898bf1;
-    color: #000000;
+    background-color: var(--Accent2-color);
     border-radius: 20px;
 }
 .filters a {
     display: block;
-    padding: .8rem 10px;
-    color: #000000;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    text-align: center;
+    color: var(--Title-color);
     text-decoration: none;
+    font-size: 1.5rem;
 }
 .filters li:hover {
-    background-color: #e0de5f;
+    background-color: var(--Hover);
 }
 /* ------------------------------------cards------------------------------------ */
 
 .card { 
-    color: #000000;
+    color: var(--Text-color);
     display: grid;
     grid-template-columns: 100%;
     grid-gap: 10px;
@@ -113,17 +125,18 @@ header span {
     border: 5rem;
     border-color: black;
     border-radius: 1rem;
+    font-family: var(--styling-font-text);
 }
 
 .information { 
-    color: black;
+    color: var(--Text-color);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     border: 0 none black;
 }
 
 .oneCard{ 
-    background-color: #898bf1;
+    background-color: var(--Accent1-Color);
     padding: 1rem;
     border: none;
     display: grid;
@@ -133,7 +146,8 @@ header span {
 }
 
 .card section h2{ 
-    background-color: #ba5ff798;
+    background-color: var(--Accent2-color);
+    color: var(--Title-color);
     border: 1px solid black;
     padding: 15px;
 }
@@ -150,7 +164,7 @@ header span {
 /* ------------------------------------List------------------------------------ */
 
 .list { 
-    color: #000000;
+    color: var(--Text-color);
     display: grid;
     grid-template-columns: 100%;
     grid-gap: 10px;
@@ -158,10 +172,11 @@ header span {
     border: 5rem;
     border-color: black;
     border-radius: 1rem;
+    font-family: var(--styling-font-text);
 }
 
 .lists { 
-    background-color: #898bf1;
+    background-color: var(--Accent1-Color);
     padding: 1rem;
     border: 1px solid black;
     display: grid;
@@ -172,11 +187,11 @@ header span {
 }
 
 .website{
-    color: #3b1e4e;
+    color: var(--Title-color);
     text-decoration: none;
     padding: 10px;
     border: 1px solid black;
-    background-color: #e0de5f;
+    background-color: var(--Accent2-color);
 }
 /* ----------------------------------------------------Footer---------------------------------------------------- */
 
@@ -184,7 +199,10 @@ footer {
     display: grid;
     padding: 1rem 10px;
     text-align: center;
-    background-color: #898bf1;
+    background-color: var(--Accent2-color);
+    color: var(--Title-color);
+    font-family: var(--styling-font-text);
+    font-family: var(--styling-font-text);
 }
 
 .social {
@@ -206,7 +224,7 @@ footer {
     height: 22px;
 }
 .social a:hover {
-    background-color: #e0de5f;
+    background-color: var(--Hover);
 }
 
 .dates {
