--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -24,4 +24,34 @@
         padding: 10px;
         border: 1px solid black;
     }
+    
+    /* ----------------------------------------------------Body House---------------------------------------------------- */
+    
+    a.link {
+    font-size: .806rem;
+    }
+
+    /* ------------------------------------news------------------------------------ */
+    .news {
+        margin-top: 20px;
+        margin-right: 20px;
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+
+    .events {
+        grid-column: 1/3;
+    }
+
+    .events p {
+        padding: 30px;
+    }
+
+    #spotlights { 
+    display:grid; 
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    place-items: center;
+    padding: 20px;
+    }
 }
