--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -28,7 +28,8 @@
     /* ----------------------------------------------------Body House---------------------------------------------------- */
     
     a.link {
-    font-size: .806rem;
+    font-size: 1.3rem;
+    top: 73%;
     }
 
     /* ------------------------------------news------------------------------------ */
