--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -211,16 +211,16 @@ width: 100%;
 a.link {
 display: block;
 position: absolute;
-top: 73%;
+top: 67%;
 right: 5%;
-width: 25%;
+width: 40%;
 margin: 0 auto;
-padding: 10px;
+padding: 5px;
 background-color: var(--Accent2-color);
 text-align: center;
 color: var(--Title-color);
 text-decoration: none;
-font-size: 1.05rem;
+font-size: .6rem;
 }
 
 a.link:hover {
@@ -245,7 +245,7 @@ a.link:hover {
 }
 .events p {
     display: block;
-    padding: 50px;
+    padding: 40px;
     background-color: var(--Accent1-Color);
     color: var(--Text-color);
     margin: 0;
