--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -89,6 +89,15 @@
     grid-gap: 25px;
     place-items: center;
     }
+    /* ----------------------------------------------------Body join---------------------------------------------------- */
+    .formData {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    /* ------------------------------------Carts------------------------------------ */
+    #membershipCarts {
+        width: 40%;
+    }
     /* ----------------------------------------------------Footer---------------------------------------------------- */
 
     footer {
