--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -55,4 +55,14 @@
     place-items: center;
     padding: 20px;
     }
+    /* ----------------------------------------------------Body join---------------------------------------------------- */
+    .formData {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    /* ------------------------------------Carts------------------------------------ */
+    #membershipCarts {
+        width: 60%;
+    }
+
 }
