--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -98,8 +98,14 @@
     #membershipCarts {
         width: 40%;
     }
-    /* ----------------------------------------------------Body House---------------------------------------------------- */
+    /* ----------------------------------------------------Body Discover---------------------------------------------------- */
     /* ------------------------------------Places Carts------------------------------------ */
+    main.discover {
+        display: grid;
+        grid-template-columns: 89% 9%;
+        column-gap: 2%;
+    }
+
     #allplaces {
         display: grid;
         grid-template-columns: 1fr 1fr;
