--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -579,6 +579,17 @@ input:-webkit-autofill{
     font-size: 1rem;
     padding: 10px;
 }
+#allplaces div button:hover {
+    background-color: var(--Hover);
+}
+
+.visitsDates {
+    background-color: var(--Accent2-color);
+    color: var(--Title-color);
+    border: 2px solid black;
+    border-radius: 10px;
+    text-align: center;
+}
 
 .hover {
     border-radius: 15px;
